Correct spacing of nav buttons

--- a/_sass/modules/_header.scss
+++ b/_sass/modules/_header.scss
@@ -74,7 +74,7 @@
           line-height: 1em;
           margin-bottom: 0.5em;
           margin-top: 0.5em;
-          padding: 0.9em 1.3em 0.75em 1.3em;
+          padding: 0.825em 1.3em;
           text-align: center;
           text-decoration: none;
 
